--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Palindrome Checker</title>
-   <script src='script.js'> </script>
 </head>
 <body>
 
   <input type="text" id="text-input" placeholder="Enter text here" />
   <button id="check-btn">Check</button>
   <p id="result"></p>
-
+  <script src="script.js"></script>
 </body>
 </html>
